[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psytestbench"
version = "1.0.6"
authors = [
  { name="Pat Deegan", email="use.contact.form@psychogenic.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Classifier: Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/psychogenic/psytestbench"
"Bug Tracker" = "https://github.com/psychogenic/psytestbench/issues"
